--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,13 @@
 Package: tradetools
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Tools for working with HMRC trade data
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
+Author: David Lee
+Maintainer: David Lee <david.lee@defra.gsi.gov.uk>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
+Imports: utils
+RoxygenNote: 6.0.1
