--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,5 +9,10 @@ Description: More about what it does (maybe more than one line)
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
-Imports: utils
+Imports: utils,
+    readr,
+    dplyr,
+    tidyr,
+    stringr,
+    magrittr
 RoxygenNote: 6.0.1
